--- a/Exp1/Exp 1.html
+++ b/Exp1/Exp 1.html
@@ -7,7 +7,7 @@
     <body>
         <div1>
             <center><h3><u> RESUME </u></h3></center>
-            <p><br><img src="C:\Users\gurun\OneDrive\Documents\MY picture.jpg" width=200 height=200></p>
+            <p><br><img src="C:\Users\Students\Downloads\fb.png" width=200 height=200></p>
             <b>
                 Gurunishal Saravanan
                 <br> 524, JR Greenpark
@@ -20,7 +20,7 @@
         </div1>
 
         <div2>
-            <br><b><u> Career Objective: </u></b>
+            <br><b><u><h4 id=#ll1> Career Objective: </h4></u></b>
             <p>
                 To find a well adversed job that provides me the opportunity to work and discover further scopes in technology and to provide my contribution to the betterment of the company.
             </p>
@@ -28,7 +28,7 @@
         </div2>
 
         <div3>
-            <br><b><u> Academics: </u></b>
+            <br><b><u><h4 id=#ll2> Academics: </h4></u></b>
             <p><table border="1" cellspacing="0">
                 <tr>
                     <td><b> Education </b></td>
@@ -64,7 +64,7 @@
         </div3>
 
         <div4>
-            <br><b><u> Technical Skills: </u></b>
+            <br><b><u><h4 id=#ll3> Technical Skills: </h4></u></b>
             <ol>
                 <li> Data Structures </li>
                 <li> Web Technology </li>
@@ -76,7 +76,7 @@
         </div4>
 
         <div5>
-            <br><b><u> Advanced Technical Skills: </u></b>
+            <br><b><u><h4 id=#ll4> Advanced Technical Skills: </h4></u></b>
             <ol>
                 <li> Turing Machines and Push down automatas </li>
                 <li> Data Analytics </li>
@@ -86,7 +86,7 @@
         </div5>
 
         <div6>
-            <br><b><u> Internships </u></b>
+            <br><b><u><h4 id=#ll5> Internships </h4></u></b>
             <ol>
                 <li><b> Cisco: </b> Essentials of Cybersecurity </li>
                 <li><b> MyCaptain: </b> Fundamentals of AI</li>
@@ -95,11 +95,11 @@
         </div6>
 
         <div7>
-            <a href="CareerObjective:"> Career Objective | </a>
-            <a href="Academics:"> Academics | </a>
-            <a href="TechnicalSkills:"> Technical Skills | </a>
-            <a href="AdvancedTechnicalSkills:"> Advanced Technical Skills | </a>
-            <a href="Internships: "> Internships </a>
+            <a href="#ll1"> Career Objective | </a>
+            <a href="#ll2"> Academics | </a>
+            <a href="#ll3"> Technical Skills | </a>
+            <a href="#ll4"> Advanced Technical Skills | </a>
+            <a href="#ll5"> Internships </a>
         </div7>
     </body>
 </html>
