--- a/Exp 3/Exp 3.html
+++ b/Exp 3/Exp 3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
  
   <title>Simple Website Design</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Exp 3.css">
 </head>
 <body>
   <div class="container">
