--- a/Exp 3/Exp 3.html
+++ b/Exp 3/Exp 3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
  
   <title>Simple Website Design</title>
-  <link rel="stylesheet" href="Exp 3.css">
+  <link rel="stylesheet" href="Untitled-2.css">
 </head>
 <body>
   <div class="container">
@@ -21,11 +21,16 @@
       <div class="buttons">
         <a href="#" class="login">Log in</a>
         <a href="#" class="btn">Register</a>
+        <br>
+        <br>
+        <img class="logo" img align="right" src="PF.jpg">
       </div>
     </nav>
     <div class="content">
       <h2>Hello,<br>Here to Assist you</h2>
       <p>Welcome to the Portfolio Developer</p>
+
+
     </div>
     <div class="link">
       <a href="#" class="hire">Hire Me</a>
