--- a/Exp 4/exp4.html
+++ b/Exp 4/exp4.html
@@ -49,7 +49,7 @@
         left: 25%;
         top: 25%;
         width: 20%;
-        height: 45%;
+        height: 43%;
         padding: 12px 20px;
         margin: 10px 0;
         box-sizing: border-box;
@@ -121,7 +121,7 @@
         left: 50%;
         top: 25%;
         width: 21%;
-        height: 55%;
+        height: 65%;
         padding: 12px 20px;
         margin: 10px 0;
         box-sizing: border-box;
@@ -159,7 +159,7 @@
         <br><input type="text" placeholder="Enter your username">
         <br><br><label for="Password">Password</label>
         <br><input type="password" placeholder="Enter your password">
-        <br><br><button type="submit">Login In</button>
+        <br><br><button type="submit">Login</button>
     </form>
 </div>
 <div class="signup-container">
