--- a/Exp5/q1.html
+++ b/Exp5/q1.html
@@ -28,8 +28,8 @@
 <body>
     <div id="content">
         <h1>Basic Calculator</h1>
-        <input type="text" id="num1" name="number1" placeholder="Number 1, Ex: 25">
-        <input type="text" id="num2" name="number2" placeholder="Number 2, Ex: 25">
+        <input type="number" id="num1" name="number1" placeholder="Number 1, Ex: 25">
+        <input type="number" id="num2" name="number2" placeholder="Number 2, Ex: 25">
         <br>
         <button onclick="operations('+')">Add (+)</button>
         <button onclick="operations('-')">Subtract (-)</button>
